--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="jumbotron text-center">
       <img src="img/widi.png" class="img-circle">
       <h1>Widi Astuti</h1>
-      <p>Programmer Design | Web Developer | YouTuber</p>
+      <p>Programmer Design | Web Developer | Desainer</p>
     </div>
     <!-- akhir jumbotron -->
 
